force-app/main/default/objects/User/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <description>Cargo del usuario dentro de la organización de Amavir</description>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administración en centros</fullName>
            </value>
            <value>
                <fullName>Animación</fullName>
            </value>
            <value>
                <fullName>Asesoría de recursos sociales</fullName>
            </value>
            <value>
                <fullName>Coordinación de enfermería</fullName>
            </value>
            <value>
                <fullName>Coordinación de gerocultores</fullName>
            </value>
            <value>
                <fullName>Coordinación equipo ars</fullName>
            </value>
            <value>
                <fullName>Coordinación ssgg</fullName>
            </value>
            <value>
                <fullName>Dirección comercial y de marketing</fullName>
            </value>
            <value>
                <fullName>Dirección de centro</fullName>
            </value>
            <value>
                <fullName>Fisioterapeuta</fullName>
            </value>
            <value>
                <fullName>Gerocultor/a</fullName>
            </value>
            <value>
                <fullName>Psicólogo/a</fullName>
            </value>
            <value>
                <fullName>Recepcionista</fullName>
            </value>
            <value>
                <fullName>Responsable comercial regional</fullName>
            </value>
            <value>
                <fullName>Terapeuta ocupacional</fullName>
            </value>
            <value>
                <fullName>Trabajador/a social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>