force-app/main/default/objects/User/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <description>Identificador externo ya sea de SAP o CRM</description>
    <externalId>true</externalId>
    <inlineHelpText>Identificador externo ya sea de SAP o CRM</inlineHelpText>
    <label>Id. Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>