force-app/main/default/objects/User/listViews/DirectoresCentros.listView-meta.xml
<ListView>
    <fullName>DirectoresCentros</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Cargo__c</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cargo__c</field>
        <operation>notEqual</operation>
        <value>Dirección de centro</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Administrador</value>
    </filters>
    <filters>
        <field>Cargo__c</field>
        <operation>notEqual</operation>
        <value>Dirección comercial y de marketing,Responsable comercial regional</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>notContain</operation>
        <value>UAT</value>
    </filters>
    <label>Usuarios activos NO directores</label>
    <language>es</language>
</ListView>