force-app/main/default/objects/User/listViews/UsuariosDirectores.listView-meta.xml
<ListView>
    <fullName>UsuariosDirectores</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Cargo__c</field>
        <operation>equals</operation>
        <value>Dirección de centro</value>
    </filters>
    <label>Usuarios Directores</label>
    <language>es</language>
</ListView>