force-app/main/default/objects/User/listViews/UsuariosExportarInformes.listView-meta.xml
<ListView>
    <fullName>UsuariosExportarInformes</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>Cargo__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cargo__c</field>
        <operation>equals</operation>
        <value>Trabajador/a social,Dirección de centro</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Usuarios para exportar informes</label>
    <language>es</language>
</ListView>